# desktop-kanojo

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  desktop-kanojo.spec  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
app/: main.py  settings_dialog.py  window.py
core/: env_file.py  live2d_binding.py  live2d_config.py  live2d_installer.py  persona.py  preferences.py  session.py
core/brain/: __init__.py  base.py  gemini_native.py  openai_compat.py  router.py
core/memory/: __init__.py  db.py  embed.py  episodic.py  facts.py  reflection.py  retrieval.py  store.py  working.py
core/perception/: __init__.py  observer.py  privacy.py  screen.py  win32.py
core/voice/: __init__.py  base.py  edge_tts_backend.py  playback.py  sentence_splitter.py  sovits_backend.py  speaker.py
docs/: live2d-models.md  sovits-training.md
live2d/: index.html
personas/: default.yaml
tests/: test_e2e.py  test_memory.py
tools/: build.ps1  import_live2d.py  prep_voice_dataset.py  probe_decay.py  probe_live2d.py  probe_persona.py  probe_proactive.py  probe_voice.py  recover_sovits_weight.py  repl.py  smoke_ui.py  sovits_train.py  start_sovits_server.ps1  test_wizard.py  verify.py
