[project]
name = "desktop-kanojo"
version = "0.0.1"
description = "Open-source desktop AI companion with cloud/local VLMs, Live2D avatar, layered memory, and voice cloning."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "desktop-kanojo contributors" }]

dependencies = [
    "PySide6>=6.7",
    "qasync>=0.27",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "sqlite-vec>=0.1.6",
    "mss>=9.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "edge-tts>=6.1",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
desktop-kanojo = "app.main:main"
desktop-kanojo-repl = "tools.repl:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "tools*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
# E501 line-too-long: format-level, not lint-level here.
# SIM102/SIM105/SIM117: stylistic — collapsing nested ifs / with / try-except-pass
# can hurt readability when the inner block is real logic. We keep them out so
# bug-finding rules (F, B) carry the real signal.
ignore = ["E501", "SIM102", "SIM105", "SIM117"]
